// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider renders default 1`] = `
<DocumentFragment>
  .emotion-0 {
  vertical-align: middle;
  border-style: solid;
  border-width: 0 0 1px 0;
  border-color: #e5e6eb;
  width: 100%;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Divider renders horizontal 1`] = `
<DocumentFragment>
  .emotion-0 {
  vertical-align: middle;
  border-style: solid;
  border-width: 0 0 1px 0;
  border-color: #e5e6eb;
  width: 100%;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Divider renders vertical 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  border-width: 0 0 0 1px;
  border-color: #e5e6eb;
  border-style: dashed;
  height: 1em;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Divider renders with colorScheme 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  border-width: 0 0 0 1px;
  border-color: #ff5e2f;
  border-style: solid;
  height: 1em;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Divider renders with text 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  border-width: 0 0 0 1px;
  border-color: #e5e6eb;
  border-style: solid;
  height: 1em;
}

.emotion-2 {
  color: #1d2129;
  margin-left: 16px;
  margin-right: 16px;
  font-size: 14px;
}

<div>
    <div
      class="emotion-0"
      textsize="20px"
    >
      <div
        class="emotion-1"
      />
      <span
        class="emotion-2"
      >
        this is a divider
      </span>
      <div
        class="emotion-1"
      />
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      />
      <span
        class="emotion-2"
      >
        this is a divider
      </span>
      <div
        class="emotion-1"
      />
    </div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      />
      <span
        class="emotion-2"
      >
        this is a divider
      </span>
      <div
        class="emotion-1"
      />
    </div>
  </div>
</DocumentFragment>
`;
